--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,8 +1,8 @@
 name: Publish and Sign Container Image
 
 on:
-    schedule:
-        - cron: "32 11 * * *"
+#     schedule:
+#         - cron: "32 11 * * *"
     push:
         branches: [main]
         # Publish semver tags as releases.
